# h3xUpdtr

./: .env.sample  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release-win-x64.yml
src/: cli.rs  main.rs
src/commands/: create.rs  mod.rs  switch.rs
src/file_storage/: mod.rs  s3.rs
src/models/: definition_version.rs  file_definition.rs  folder_config.rs  mod.rs  version_definition.rs
